SERVER-14123 prevent the explain BSONObj from growing too large

(cherry picked from commit 906cfb13a337fdbdf1b94b773390c4230b059fec)